--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "@types/express": "^5.0.0",
+    "@types/http-errors": "^2.0.4",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.1",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
@@ -24,6 +26,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.8.4"
+    "http-errors": "^2.0.0",
+    "mongoose": "^8.8.4",
+    "morgan": "^1.10.0"
   }
 }
